# vuemonitor

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLOUDFLARE.md  INSTALL.md  README.md  build.bat  cloudflare-setup.sh  config.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-deploy.bat  findings.md  progress.md  setup.bat  start.bat  start.sh  task_plan.md  test-ai.ps1  update.sh  upload_exe.py
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_team_tables.py  003_license_enhance.py  004_new_tables.py  005_missing_tables.py
server/app/: config.py  main.py
server/app/ai/: providers.py  service.py
server/app/api/: admin.py  ai.py  ai_templates.py  alert_rules.py  auth.py  collect.py  dashboard.py  feature.py  gdpr.py  license.py  monitor.py  notifications.py  operation_audit.py  products.py  router.py  security_audit.py  sync.py  system.py  task_queue.py  teams.py  users.py
server/app/collect/: engine.py  parsers.py  rate_controller.py  session_manager.py
server/app/core/: cache.py  database.py  exceptions.py  graceful_shutdown.py  redis.py  security.py  (+1 more)
server/grafana/: prometheus.yml
server/scripts/: db_maintenance.py  generate_api_docs.py
server/shared/: __init__.py
server/tests/: benchmark_collect.py  conftest.py  test_ai_e2e.py  test_api.py  test_api_core.py  test_api_integration.py  test_benchmark.py  test_contract.py  test_full_system.py  test_services.py  test_unit.py
(+808 files in other folders)
