[tool.poetry]
name = "vuemonitor-server"
version = "0.1.0"
description = "XHS365 AI E-commerce Monitoring Platform - Server"
authors = ["XHS365 Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "shared", from = ".."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiohttp = "^3.9.0"
redis = "^5.0.0"
apscheduler = "^3.10.4"
jinja2 = "^3.1.4"
openai = "^1.30.0"
langchain-core = "^0.2.0"
structlog = "^24.2.0"
httpx = "^0.27.0"
bcrypt = "^4.1.0"
pycryptodome = "^3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
